# secure-rng

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  secure-rng.pc.in
include/: aes.h  secure-rng.h
misc/: bench_pr_rng.c  bench_rng.c  test_pr_rng.c  test_rng.c
src/: secure-rng.c
src/aarch64/: aes.c  detect.cpp
src/generic/: aes.c
src/x86/: aes.c  detect.cpp
